--- a/app/src/main/res/layout/activity_note_details.xml
+++ b/app/src/main/res/layout/activity_note_details.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toBottomOf="@+id/titleTextView">
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/blue_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -31,7 +31,7 @@
             android:gravity="center" />
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/yellow_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -41,7 +41,7 @@
             android:checked="false" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/red_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
