--- a/app/src/main/res/layout/activity_note_photo_details.xml
+++ b/app/src/main/res/layout/activity_note_photo_details.xml
@@ -24,7 +24,7 @@
         app:layout_constraintTop_toBottomOf="@+id/photoImageView">
 
         <RadioButton
-            android:id="@+id/radioButton3"
+            android:id="@+id/blue_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -35,7 +35,7 @@
             android:gravity="center" />
 
         <RadioButton
-            android:id="@+id/radioButton"
+            android:id="@+id/yellow_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -45,7 +45,7 @@
             android:checked="false" />
 
         <RadioButton
-            android:id="@+id/radioButton2"
+            android:id="@+id/red_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
